# ZEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README  README.md  README.txt  makefile
src/: bigInts.hpp  collision.hpp  main.c  main.cpp  zbit.hpp  zcollide.h  zcollide.hpp  zdeps.c  zengine.h  zengine.hpp  zint.hpp  zmath.h  zmath.hpp  ztext.h  ztext.hpp  zwindow.hpp
src/engine/: app.cpp  app.hpp  buffer.cpp  buffer.hpp  device.cpp  device.hpp  font.hpp  global.cpp  global.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderSystem.cpp  renderSystem.hpp  renderer.cpp  renderer.hpp  shaders.hpp  sprite.hpp  swapChain.cpp  swapChain.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/engine/shaders/: texture.frag.spv
src/examples/: flappybird.h
src/games/: flappyBird.hpp  slimeAttack.hpp  stresstest.hpp  terminalCalculator.hpp
src/games/astroids/: astroid.cpp  astroid.hpp  astroids.cpp  astroids.hpp
src/games/flappyBird/: flappyBird.cpp  flappyBird.hpp  program.cpp  program.hpp
src/games/functions/: audio.hpp  collision.hpp  keyboard.hpp  math.hpp  string.hpp
src/games/slimeAttack/: enemies.cpp  enemies.hpp  slimeAttack.cpp  slimeAttack.hpp  slimeAttackEnemies.cpp  slimeAttackEnemies.hpp
src/games/terminalCalculator/: terminalCalculator.cpp  terminalCalculator.hpp
src/program/: program.cpp  program.hpp
src/program/functions/: audio.cpp  audio.hpp  collision.hpp  keyboard.hpp  math.hpp  noise.hpp  string.hpp
src/shaders/: texture.frag  texture.vert  texture.vert.spv
src/vulkan/: app.cpp  app.hpp  buffer.cpp  buffer.hpp  device.cpp  device.hpp  font.cpp  font.hpp  global.cpp  global.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  pipelineGraphics.cpp  pipelineSprites.cpp  renderSystem.cpp  renderSystem.hpp  renderer.cpp  renderer.hpp  shaders.hpp  sprite.hpp  stb_image.h  swapChain.cpp  swapChain.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/vulkan/shaders/: texture.frag  texture.frag.spv  texture.vert  texture.vert.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
tests/: test_invariant_zengine.h
